crates/core/src/commands/spectrogram/tests/snapshots/caesura__commands__spectrogram__tests__spectrogram_command_tests__spectrogram_command_flac16_441.snap
---
source: crates/core/src/commands/spectrogram/tests/spectrogram_command_tests.rs
expression: snapshot
---
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 01 Track One.full.png
  size: 44505
  sha256: 374deabbe815fee5cbe46253ddc78b71ec3769e985d5b9a1c8ec68036d6e23ba
  image:
    width: 3140
    height: 611
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 01 Track One.zoom.png
  size: 23930
  sha256: a991b8b3f4fd601bc9c4df3f9f5f7d28309df89d9a8ecc63de9ee7198b362a17
  image:
    width: 644
    height: 1123
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 02 Track Two.full.png
  size: 48440
  sha256: eecf06f49d5caae715d9933bd0278a17afa58fb847b0ce298e3e29eaa6fbd235
  image:
    width: 3140
    height: 611
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 02 Track Two.zoom.png
  size: 20973
  sha256: 269c7442c1fad01d24ead048cba2958d16f3a72a2f1b3bea22793516cd909882
  image:
    width: 644
    height: 1123
    color_type: Rgb8
