crates/core/src/commands/spectrogram/tests/snapshots/caesura__commands__spectrogram__tests__spectrogram_command_tests__spectrogram_command_flac16_48.snap
---
source: crates/core/src/commands/spectrogram/tests/spectrogram_command_tests.rs
expression: snapshot
---
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 01 Track One.full.png
  size: 14178
  sha256: b81142981711ffa3f1b5e62baa1c2a745aeb793226c66582d101ab9e6f5f0b9b
  image:
    width: 3144
    height: 611
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 01 Track One.zoom.png
  size: 10756
  sha256: 64b787670987458831ae434873c52c3e188187365b3107f4f05b4570ff7cd0e7
  image:
    width: 644
    height: 1123
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 02 Track Two.full.png
  size: 13245
  sha256: 5530b478d6ee2d9e015f8cee8566902dc68e5e3fcbb1aab2a52a4f7e9224cec5
  image:
    width: 3144
    height: 611
    color_type: Rgb8
- directory: "Test Artist - Test Album [2020] [WEB SPECTROGRAMS]"
  filename: Test Artist - Test Album - 02 Track Two.zoom.png
  size: 10607
  sha256: 0026f4e75c21d58ddc3e617b06ded6b2c98c8a85016dace8e3c8ec1e8402d235
  image:
    width: 644
    height: 1123
    color_type: Rgb8
