crates/core/src/commands/spectrogram/tests/snapshots/caesura__commands__spectrogram__tests__spectrogram_command_tests__spectrogram_command_track_1s.snap
---
source: crates/core/src/commands/spectrogram/tests/spectrogram_command_tests.rs
expression: snapshot
---
- directory: "Very Short Artist - Very Short Album [2024] [WEB SPECTROGRAMS]"
  filename: Very Short Artist - Very Short Album - 01 Very Short Track.full.png
  size: 31197
  sha256: af8188f1084ecd299690d293cbfd2a5306b09ce337d39d503221061e177890eb
  image:
    width: 3084
    height: 611
    color_type: Rgb8
- directory: "Very Short Artist - Very Short Album [2024] [WEB SPECTROGRAMS]"
  filename: Very Short Artist - Very Short Album - 01 Very Short Track.zoom.png
  size: 17007
  sha256: 529d9008c9eecc2e10ef3601cb306e9ce105021c1e23ad4323244d889c985e7d
  image:
    width: 395
    height: 1123
    color_type: Rgb8
