crates/core/src/commands/spectrogram/tests/snapshots/caesura__commands__spectrogram__tests__spectrogram_command_tests__spectrogram_command_track_30s.snap
---
source: crates/core/src/commands/spectrogram/tests/spectrogram_command_tests.rs
expression: snapshot
---
- directory: "Short Artist - Short Album [2024] [WEB SPECTROGRAMS]"
  filename: Short Artist - Short Album - 01 Short Track.full.png
  size: 78272
  sha256: 7b95c216d9d3cd8105b5841a4ef5b4486178739701aa556cb9b5773f9244d24c
  image:
    width: 3137
    height: 611
    color_type: Rgb8
- directory: "Short Artist - Short Album [2024] [WEB SPECTROGRAMS]"
  filename: Short Artist - Short Album - 01 Short Track.zoom.png
  size: 23940
  sha256: 54656af9aa1999920ddd4c910dcef807563d486a672c1880c2c14eed835def5e
  image:
    width: 644
    height: 1123
    color_type: Rgb8
